--- a/src/Bloggy.Client.Web/StringResources.resx
+++ b/src/Bloggy.Client.Web/StringResources.resx
@@ -120,6 +120,9 @@
   <data name="Comments" xml:space="preserve">
     <value>Comments</value>
   </data>
+  <data name="PostNewComment" xml:space="preserve">
+    <value>New Comment</value>
+  </data>
   <data name="SendComment" xml:space="preserve">
     <value>Send Comment</value>
   </data>
