--- a/src/Bloggy.Client.Web/StringResources.resx
+++ b/src/Bloggy.Client.Web/StringResources.resx
@@ -120,6 +120,15 @@
   <data name="Comments" xml:space="preserve">
     <value>Comments</value>
   </data>
+  <data name="CreateManagementUserAllowedMessage" xml:space="preserve">
+    <value>There is currently no user inside the database. You can create a management user here which will have the highest privileges to perform actions.</value>
+  </data>
+  <data name="CreateManagementUserPageHeading" xml:space="preserve">
+    <value>Create Management User</value>
+  </data>
+  <data name="CreateUserButtonLabel" xml:space="preserve">
+    <value>Create User</value>
+  </data>
   <data name="PostNewComment" xml:space="preserve">
     <value>New Comment</value>
   </data>
